; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hptrr/extr_hptrr_os_bsd.c_freelist_get.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hptrr/extr_hptrr_os_bsd.c_freelist_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.freelist = type { i64, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @freelist_get(%struct.freelist* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.freelist*, align 8
  %4 = alloca i8*, align 8
  store %struct.freelist* %0, %struct.freelist** %3, align 8
  %5 = load %struct.freelist*, %struct.freelist** %3, align 8
  %6 = getelementptr inbounds %struct.freelist, %struct.freelist* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %27

9:                                                ; preds = %1
  %10 = load %struct.freelist*, %struct.freelist** %3, align 8
  %11 = getelementptr inbounds %struct.freelist, %struct.freelist* %10, i32 0, i32 1
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @HPT_ASSERT(i8* %12)
  %14 = load %struct.freelist*, %struct.freelist** %3, align 8
  %15 = getelementptr inbounds %struct.freelist, %struct.freelist* %14, i32 0, i32 1
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %4, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = bitcast i8* %17 to i8**
  %19 = load i8*, i8** %18, align 8
  %20 = load %struct.freelist*, %struct.freelist** %3, align 8
  %21 = getelementptr inbounds %struct.freelist, %struct.freelist* %20, i32 0, i32 1
  store i8* %19, i8** %21, align 8
  %22 = load %struct.freelist*, %struct.freelist** %3, align 8
  %23 = getelementptr inbounds %struct.freelist, %struct.freelist* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = add nsw i64 %24, -1
  store i64 %25, i64* %23, align 8
  %26 = load i8*, i8** %4, align 8
  store i8* %26, i8** %2, align 8
  br label %28

27:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %28

28:                                               ; preds = %27, %9
  %29 = load i8*, i8** %2, align 8
  ret i8* %29
}

declare dso_local i32 @HPT_ASSERT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
